# sevenseas-io-wmm

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
docs/: index.html  site.css
examples/: declination.rs
src/: lib.rs
