[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>"]
categories = ["no-std"]
description = " A no_std WMM library used to calculate the magnetic declination "
documentation = "https://docs.rs/wmm"
edition = "2018"
keywords = ["magnetic"]
license = "MIT OR Apache-2.0"
name = "wmm"
readme = "README.md"
repository = "https://github.com/sevenseas-io/wmm"
version = "0.1.1-alpha.1"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.74"
time = { version = "0.2.16", default-features = false }

[dev-dependencies]
time = { version = "0.2.16", default-features = true }

[[example]]
name = "declination"
