[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>"]
categories = ["no-std", "science"]
description = " WMM no_std library used to calculate the magnetic declination "
documentation = "https://docs.rs/wmm"
edition = "2018"
keywords = ["magnetic"]
license = "MIT OR Apache-2.0"
name = "wmm"
readme = "README.md"
repository = "https://github.com/sevenseas-io/wmm"
version = "0.1.1-beta.1"
exclude = ["docs"]

[build-dependencies]
cc = "1.0.59"

[dependencies]
libc = { version="0.2.76", default-features = false }
spin = "0.9.2"
time = { version="0.3.2", default-features = false }

[dev-dependencies]
time = { version="0.3.2", default-features = true }

[[example]]
name = "declination"
