[package]
authors = ["René Herrero Gómez <rene@sevenseas.io>"]
categories = ["no-std", "science"]
description = " WMM no_std library used to calculate the magnetic declination "
documentation = "https://docs.rs/wmm"
edition = "2021"
keywords = ["magnetic"]
license = "MIT OR Apache-2.0"
name = "wmm"
readme = "README.md"
repository = "https://github.com/sevenseas-io/wmm"
version = "0.1.2"
exclude = ["docs"]

[build-dependencies]
cc = "1.0.71"

[dependencies]
cty = "0.2.2"
spin = "0.9.2"
time = { version="0.3.4", default-features = false }

[[example]]
name = "declination"
